# RPCore

./: Cargo.toml  README.1.md  README.md  TODO.md
rpcore/: Cargo.toml
rpcore-core/: Cargo.toml
rpcore-core/src/: callback.rs  handler_builder.rs  lib.rs
rpcore-core/src/invocation_source/: recv.rs
rpcore-core/src/layer/: identity.rs  mod.rs
rpcore-core/src/server/: hooks.rs  mod.rs  settings.rs  shutdown.rs  singleplex.rs  token.rs
rpcore-mpsc/: Cargo.toml
rpcore-mpsc/examples/: echo-server.rs  identify-client.rs
rpcore-mpsc/src/: lib.rs  rx.rs  rx_with_event_fd.rs  tx_callback.rs
rpcore-mpsc/src/impl_completion/: io_uring.rs  mod.rs
rpcore-mpsc/src/impl_readiness/: event_manager.rs  mio.rs  mod.rs  nix.rs
rpcore-mpsc/src/impl_recv/: mod.rs  recv_error.rs
rpcore-mpsc/src/mpsc_server/: builder.rs  client.rs  mod.rs  server.rs  settings.rs
rpcore-stream/: Cargo.toml  draft.md
rpcore-stream/examples/: my-protocol.rs
rpcore-stream/src/: buf.rs  extended_io.rs  lib.rs  split.rs
rpcore-stream/src/codec/: extended_io.rs  mod.rs
rpcore-stream/src/split/: mod.rs
rpcore/src/: lib.rs
rpcore/src/concurrency_limit/: handler.rs  layer.rs  mod.rs
rpcore/src/log/: handler.rs  layer.rs  mod.rs
src/: lib.rs
src/channel_based/: callback.rs  mod.rs
src/core/: handler_builder.rs
src/core/invocation_source/: readiness.rs  recv.rs
src/core/layer/: mod.rs
src/defs/: handler_builder.rs  mod.rs
src/defs/invocation_source/: completion.rs  mod.rs  readiness.rs  recv.rs
src/defs/layer/: layer_fn.rs  stack.rs  tuple.rs
src/layers/: concurrency_limit.rs  log.rs  mod.rs
src/mpsc/: impl_readiness.rs  impl_recv.rs  mod.rs  oneshot_callback.rs  rx.rs  rx_with_event_fd.rs
src/mpsc/impl_completion/: io_uring.rs
src/mpsc/impl_readiness/: event_manager.rs  mio.rs  nix.rs
src/mpsc/impl_recv/: impl_recv_error.rs  mod.rs
src/mpsc/singleplex_server/: builder.rs  client.rs  mod.rs  settings.rs
src/server/: mod.rs  settings.rs  token.rs
src/utils/: event_manager.rs  mod.rs
