[package]
name = "rpcore"
version = "0.1.0"
edition = "2021"

[dependencies]
event-manager = { version = "0.4", optional = true }
io-uring = { version = "0.7", optional = true }
libc = "0.2"
log = "0.4"
mio = { version = "1.0", features = ["os-ext", "os-poll"], optional = true }
nix = { version = "0.29", features = ["event"], optional = true }
oneshot = { version = "0.1", optional = true }
socket2 = { version = "0.5", optional = true }
thiserror = "2.0.12"

[dev-dependencies]
env_logger = "0.11.6"
rand = "0.9.0"

[features]
mpsc = ["dep:oneshot"]
stream = []
nix = ["dep:nix"]
