[workspace]
resolver = "2"
members = ["rpcore-core", "rpcore", "rpcore-mpsc", "rpcore-stream"]

[workspace.package]
version = "0.2.0"
authors = ["Fuu <g.for.xyz@gmail.com>"]
edition = "2021"
rust-version = "1.81"

[workspace.dependencies]
event-manager = "0.4"
io-uring = "0.7"
libc = "0.2"
log = "0.4"
mio = { version = "1.0", features = ["os-ext", "os-poll"] }
nix = { version = "0.30", features = ["event"] }
oneshot = "0.1"
thiserror = "2"
