[package]
name = "rpcore-mpsc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
rpcore-core = { path = "../rpcore-core" }

event-manager = { workspace = true, optional = true }
io-uring = { workspace = true, optional = true }
libc = { workspace = true }
log = { workspace = true }
mio = { workspace = true, optional = true }
nix = { workspace = true, optional = true }
oneshot = { workspace = true }
thiserror = { workspace = true, optional = true }

[features]
server = ["dep:thiserror"]
