[package]
name = "rpcore-mpsc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
rpcore-core = { path = "../rpcore-core" }

event-manager = { workspace = true, optional = true }
io-uring = { workspace = true, optional = true }
libc = { workspace = true }
log = { workspace = true }
mio = { workspace = true, optional = true }
nix = { workspace = true, optional = true }
oneshot = { workspace = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
rpcore = { path = "../rpcore", features = ["log"] }

rand = "0.9"
simplelog = "0.12"

[features]
default = ["server"]
server = ["dep:thiserror"]

[[example]]
name = "echo-server"
path = "examples/echo-server.rs"

[[example]]
name = "identify-client"
path = "examples/identify-client.rs"
