[package]
name = "rpcore-stream"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
rpcore-core = { path = "../rpcore-core" }

bytes = "1"
libc = "0.2"
socket2 = { version = "0.5", optional = true }

[features]

[[example]]
name = "my-protocol"
path = "examples/my-protocol.rs"
